--- a/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
+++ b/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Pacientes","Listar","Paciente")</li>
+                    <li>@Html.ActionLink("Pacientes", "Listar", "Paciente")</li>
+                    <li>@Html.ActionLink("Pacientes por Plano", "ListarPorPlano", "Paciente")</li>
                     <li>@Html.ActionLink("Cidades", "Listar", "Cidade")</li>
                 </ul>
             </div>
