--- a/AtendimentoHospitalar/Views/Paciente/_ListarPacientes.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/_ListarPacientes.cshtml
@@ -1,23 +1,47 @@
 ﻿@model IEnumerable<AtendimentoHospitalar.Models.Paciente>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Editar", new { id = item.Id }) |
-            @Html.ActionLink("Excluir", "Excluir", new { id = item.Id })
-        </td>
-    </tr>
-}
-
+<table class="table table-hover table-responsive">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EnumTipoConveniado)
+            </th>
+            <th>@Html.DisplayNameFor(model => model.DataNascimento)</th>
+            <th>@Html.DisplayNameFor(q => q.ObjPlanoDeSaude)</th>
+            <th></th>
+        </tr>
+    </thead>
+    @if (Model!=null)
+    {
+        foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(h => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(d => item.EnumTipoConveniado)
+                </td>
+                <td>
+                    @Html.DisplayFor(c => item.DataNascimento)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.ObjPlanoDeSaude.Descricao)
+                </td>
+                <td>
+                    <a class="btn btn-default btn-sm" href="@Url.Action("Editar", "Paciente", new {item.Id})"><i class="glyphicon glyphicon-pencil"></i></a>
+                    <a class="btn btn-default btn-sm" href="@Url.Action("Delete", "Paciente", new {item.Id})"><i class="glyphicon glyphicon-trash"></i></a>
+                </td>
+            </tr>
+        }
+    }
+    else
+    {
+        <tr>
+            <td colspan="5">@Html.Label("Não foi encontrado resultado")</td>
+        </tr>
+    }
 </table>
