--- a/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
+++ b/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Lista Todos", "Listar", "Paciente")</li>
                             <li>@Html.ActionLink("Busca por Plano", "ListarPorPlano", "Paciente")</li>
+                            <li>@Html.ActionLink("Novo", "Novo", "Paciente")</li>
                         </ul>
                     </li>                    
                     <li>@Html.ActionLink("Cidades", "Listar", "Cidade")</li>
