--- a/AtendimentoHospitalar/Views/Paciente/Listar.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Listar.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<AtendimentoHospitalar.Models.Paciente>
 @{
-    ViewBag.Title = "Listar";
+    ViewBag.Title = "Pacientes";
 }
 
-<h2>Listar</h2>
-
-@Html.ActionLink("Novo Paciente","Novo")
+<h2>Listar Pacientes</h2>
+<div>
+    <div>
+        @Html.ActionLink(" ", "Novo", null, new { @class = "btn btn-success btn-lg glyphicon glyphicon-plus" })
+    </div>
+</div>
 
 <table class="table table-hover table-responsive">
     <thead>
