--- a/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
@@ -7,12 +7,12 @@
 {
     <div class="form-horizontal">
         <h4>Novo Paciente</h4>
-        <hr/>
+        <hr />
         <div class="form-group">
-            @Html.LabelFor(model => model.Nome, new { @class="control-label col-md-2"})
+            @Html.LabelFor(model => model.Nome, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Nome, new { @class="form-control"})
-            </div>  
+                @Html.TextBoxFor(model => model.Nome, new { @class = "form-control" })
+            </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.DataNascimento, new { @class = "control-label col-md-2" })
@@ -24,8 +24,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ObjPlanoDeSaude, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @* @Html.DropDownList("ObjPlanoDeSaude.Id", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
-                @Html.DropDownListFor(model=>model.ObjPlanoDeSaude.Id, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
+                @* @Html.DropDownList("ObjPlanoDeSaude.Id", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
+                @Html.DropDownListFor(model => model.ObjPlanoDeSaude.Id, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
             </div>
         </div>
 
@@ -35,29 +35,23 @@
                 @Html.EnumDropDownListFor(model => model.EnumTipoConveniado, new { @class = "form-control" })
             </div>
         </div>
-        
-        
+
+
         @*AQUI TRABALHAREMOS O MODAL*@
         <div class="form-group">
-            @Html.LabelFor(model => model.ObjCidade.CidadeId, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="input-group col-md-4">
-                    @Html.HiddenFor(model => model.ObjCidade.CidadeId)
-                    @*@Html.TextBoxFor(model => model.ObjCidade.Estado, new { @class = "control-label col-md-4",@id="est"})*@
-                    @Html.TextBoxFor(model => model.ObjCidade.Nome, new { @class = "form-control" })
-                    <span class="input-group-btn">
-                        <a href="#" id="btnBuscarCidade" class="btn btn-default" data-toggle="modal" data-target="#myModal">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </a>
-                    </span>
-                </div>
-                @Html.ValidationMessageFor(model => model.ObjCidade.CidadeId, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.ObjCidade.CidadeId)
+            @Html.LabelFor(model => model.ObjCidade.CidadeId, new {@class = "control-label col-md-2"})
+            <div class="input-group col-md-3">
+                @*@Html.TextBoxFor(model => model.ObjCidade.Estado, new { @class = "control-label col-md-4",@id="est"})*@
+                @Html.TextBoxFor(model => model.ObjCidade.Nome, new {@class = "form-control"})
+                <a href="#" id="btnBuscarCidade" class="btn btn-default input-group-addon" data-toggle="modal" data-target="#myModal">
+                    <i class="glyphicon glyphicon-search"></i>
+                </a>
             </div>
+            @Html.ValidationMessageFor(model => model.ObjCidade.CidadeId, "", new {@class = "text-danger"})
         </div>
-
-        <input type="submit" value="Gravar" class="btn btn-lg btn-success"> 
+        <input type="submit" value="Gravar" class="btn btn-lg btn-success">
     </div>
-
 }
 
 @*MODAL CONSULTANDO ENDEREÇO*@
