--- a/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
+++ b/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <li>@Html.ActionLink("Novo", "Novo", "Paciente")</li>
                         </ul>
                     </li>                    
-                    <li>@Html.ActionLink("Cidades", "Listar", "Cidade")</li>
+                    <li>@Html.ActionLink("Cidades", "ListarComFiltroPorEstado", "Cidade")</li>
                 </ul>
             </div>
         </div>
