--- a/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
@@ -22,10 +22,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ObjPlanoDeSaude, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PlanoDeSaude, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @* @Html.DropDownList("ObjPlanoDeSaude.Id", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
-                @Html.DropDownListFor(model => model.ObjPlanoDeSaude.Id, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
+                @* @Html.DropDownList("PlanoDeSaude.PlanoDeSaudeId", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
+                @Html.DropDownListFor(model => model.PlanoDeSaudeId, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
             </div>
         </div>
 
@@ -39,16 +39,16 @@
 
         @*AQUI TRABALHAREMOS O MODAL*@
         <div class="form-group">
-            @Html.HiddenFor(model => model.ObjCidade.CidadeId)
-            @Html.LabelFor(model => model.ObjCidade.CidadeId, new {@class = "control-label col-md-2"})
+            @Html.HiddenFor(model => model.CidadeId)
+            @Html.LabelFor(model => model.CidadeId, new {@class = "control-label col-md-2"})
             <div class="input-group col-md-3">
                 @*@Html.TextBoxFor(model => model.ObjCidade.Estado, new { @class = "control-label col-md-4",@id="est"})*@
-                @Html.TextBoxFor(model => model.ObjCidade.Nome, new {@class = "form-control"})
+                @Html.TextBoxFor(model => model.Cidade.Nome, new {@class = "form-control"})
                 <a href="#" id="btnBuscarCidade" class="btn btn-default input-group-addon" data-toggle="modal" data-target="#myModal">
                     <i class="glyphicon glyphicon-search"></i>
                 </a>
             </div>
-            @Html.ValidationMessageFor(model => model.ObjCidade.CidadeId, "", new {@class = "text-danger"})
+            @Html.ValidationMessageFor(model => model.CidadeId, "", new {@class = "text-danger"})
         </div>
         <input type="submit" value="Gravar" class="btn btn-lg btn-success">
     </div>
@@ -64,8 +64,8 @@
             </div>
             <div class="modal-body">
 
-                @Html.LabelFor(model => model.ObjCidade.Estado)
-                @Html.EnumDropDownListFor(model => model.ObjCidade.Estado, "Selecione...", new { @class = "form-control" })
+                @Html.LabelFor(model => model.Cidade.Estado)
+                @Html.EnumDropDownListFor(model => model.Cidade.Estado, "Selecione...", new { @class = "form-control" })
 
                 <div class="row" id="cidadeEstado">
                 </div>
@@ -83,14 +83,14 @@
 
 @section Scripts {
     <script>
-        $("#ObjCidade_Estado").on("change", function () {
+        $("#Cidade_Estado").on("change", function () {
             var estadoView = $(this).val();
             $("#cidadeEstado").load('@Url.Action("ListarPorEstadoPraCliente", "Cidade")', { estado: estadoView });
         });
 
         $("#cidadeEstado").on("click", "td a", function () {
-            $("#ObjCidade_CidadeId").val($(this).attr("id"));
-            $("#ObjCidade_Nome").val($(this).attr("data-value"));
+            $("#CidadeId").val($(this).attr("id"));
+            $("#Cidade_Nome").val($(this).attr("data-value"));
             //$("#est").val($(this).attr("data-value"));
             $("#myModal").modal("hide");
         });
