Realizado o CRUD do paciente

--- a/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
@@ -24,8 +24,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PlanoDeSaude, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @* @Html.DropDownList("PlanoDeSaude.PlanoDeSaudeId", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
-                @Html.DropDownListFor(model => model.PlanoDeSaudeId, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
+                @* @Html.DropDownList("PlanoDeSaudeId", ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
+                @Html.DropDownList("PlanoDeSaudeId", ViewBag.PlanoDeSaudeId as SelectList, string.Empty, new { @class = "form-control" })
+                @*@Html.DropDownListFor(model => model.PlanoDeSaudeId, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })*@
             </div>
         </div>
 
