--- a/AtendimentoHospitalar/Views/Cidade/_ListarCidadesNoCLiente.cshtml
+++ b/AtendimentoHospitalar/Views/Cidade/_ListarCidadesNoCLiente.cshtml
@@ -1,29 +1,38 @@
 ﻿@model IEnumerable<AtendimentoHospitalar.Models.Cidade>
 
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th></th>
-    </tr>
+    @if (Model != null && Model.Any())
+    {
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            <a href="#" id="@item.CidadeId" data-value="@item.Nome"><i class="glyphicon glyphicon-check"></i>Selecionar</a>
-        </td>
-    </tr>
-}
-
+        foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    <a href="#" id="@item.CidadeId" data-value="@item.Nome"><i class="glyphicon glyphicon-check"></i>Selecionar</a>
+                </td>
+            </tr>
+        }
+    }
+    else
+    {
+        <tr>
+            <td colspan="2">Não há cidades.</td>
+        </tr>
+    }
 </table>
 
-    <script>
-        //$("td a").on("click", function() {
-        //    $("#Cidade_CidadeId").val($(this).attr("id"));
-        //    $("#Cidade_Nome").val($(this).attr("data-value"));
-        //});
-    </script>
+<script>
+    //$("td a").on("click", function() {
+    //    $("#Cidade_CidadeId").val($(this).attr("id"));
+    //    $("#Cidade_Nome").val($(this).attr("data-value"));
+    //});
+</script>
