--- a/AtendimentoHospitalar/Views/Paciente/Listar.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Listar.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(m => item.PlanoDeSaude.Descricao)
             </td>
             <td>
-                <a class="btn btn-default btn-sm" href="@Url.Action("Editar", "Paciente", new { item.PacienteId })"><i class="glyphicon glyphicon-pencil"></i></a>
+                <a class="btn btn-default btn-sm" href="@Url.Action("Editar", "Paciente", new { id = item.PacienteId })"><i class="glyphicon glyphicon-pencil"></i></a>
                 <a class="btn btn-default btn-sm" href="@Url.Action("Delete", "Paciente", new { item.PacienteId })"><i class="glyphicon glyphicon-trash"></i></a>
             </td>
         </tr>
