--- a/AtendimentoHospitalar/Views/Paciente/ListarPorPlano.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/ListarPorPlano.cshtml
@@ -10,8 +10,8 @@
         @Html.ActionLink(" ", "Novo", null, new { @class = "btn btn-success btn-lg glyphicon glyphicon-plus" })
     </div>
     <div class="col-md-9 text-right">
-        @Html.LabelFor(model => model.ObjPlanoDeSaude)
-        @Html.DropDownListFor(model => model.ObjPlanoDeSaude.Id, ViewBag.PlanoId as SelectList, string.Empty, new { @class = "form-control" })
+        @Html.LabelFor(model => model.PlanoDeSaude)
+        @Html.DropDownList("PlanoDeSaudeId",null, string.Empty, new { @class = "form-control" })
     </div>
 </div>
 
@@ -24,7 +24,7 @@
 @section Scripts {
 
     <script>
-        $("#ObjPlanoDeSaude_Id").on("change", function () {
+        $("#PlanoDeSaudeId").on("change", function () {
             var planoIdView = $(this).val();
 
             $("#pacientes").load('@Url.Action("ListarPorPlanoResult", "Paciente")', { planoId: planoIdView });
