--- a/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
+++ b/AtendimentoHospitalar/Views/Paciente/Novo.cshtml
@@ -26,6 +26,10 @@
             <div class="col-md-10">
                 @Html.DropDownList("PlanoDeSaudeId", null, string.Empty, new { @class = "form-control" })
             </div>
+            
+            @*<div class="col-md-10">
+                @Html.DropDownList("PlanoDeSaudeId", (SelectList)ViewBag.PlanoDeSaude, string.Empty, new { @class = "form-control" })
+            </div>*@
         </div>
 
         <div class="form-group">
