--- a/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
+++ b/AtendimentoHospitalar/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Sistema para Atendimento Laboratorial</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
@@ -26,7 +26,6 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Lista Todos", "Listar", "Paciente")</li>
                             <li>@Html.ActionLink("Busca por Plano", "ListarPorPlano", "Paciente")</li>
-                            <li>@Html.ActionLink("Novo", "Novo", "Paciente")</li>
                         </ul>
                     </li>                    
                     <li>@Html.ActionLink("Cidades", "ListarComFiltroPorEstado", "Cidade")</li>
