--- a/AtendimentoHospitalar/Views/Cidade/_ListarCidades.cshtml
+++ b/AtendimentoHospitalar/Views/Cidade/_ListarCidades.cshtml
@@ -14,8 +14,8 @@
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
         <td>
-            @Html.ActionLink("Editar", "Editar", new { id = item.CidadeId }) |
-            @Html.ActionLink("Excluir", "Excluir", new { id = item.CidadeId })
+            @Html.ActionLink(" ", "Editar", new { id = item.CidadeId }, htmlAttributes: new { @class = "glyphicon glyphicon-pencil btn btn-default" })
+            @Html.ActionLink(" ", "Excluir", new { id = item.CidadeId }, htmlAttributes: new { @class = "glyphicon glyphicon-trash btn btn-danger" })
         </td>
     </tr>
 }
